# fiber-dashboard

./: .env.example  .gitignore  CHANNELS_FEATURE_SUMMARY.md  Cargo.toml  Dockerfile  NEW_API_SUMMARY.md  README.md  compose.yaml
app/: .env.example  README.md  eslint.config.mjs  example-new-apis.ts  package.json  pnpm-lock.yaml  vitest.config.ts
app/src/app/: globals.css  layout.tsx  page.tsx  style.css
app/src/app/channel/[channelId]/: page.tsx
app/src/app/channel/[channelOutpoint]/: page.tsx
app/src/app/channels/: page.tsx
app/src/app/node/[nodeId]/: page.tsx
app/src/app/nodes/: page.tsx
app/src/app/search/: page.tsx
app/src/app/test/: ChannelsOnMapTest.tsx  NetworkGraphTest.tsx  NodesOnMapTest.tsx  page.tsx
app/src/features/channels/: utils.ts
app/src/features/charts/: ChannelMapChart.tsx  CityMapChart.tsx  HistoryChannelCapacityChart.tsx  HistoryNodeChart.tsx  IspRankingChart.tsx  NetworkGraphChart.tsx  NodesRankingChart.tsx
app/src/features/dashboard/: index.ts
app/src/features/test/: index.tsx
app/src/lib/: client.ts  const.ts  index.ts  types.ts  utils.ts
app/src/lib/__tests__/: api.test.ts  utils.test.ts
app/src/lib/analytics/: PostHogProvider.tsx  index.ts  posthog.ts  web-vitals.ts
app/src/lib/config/: assets.ts
app/src/shared/hooks/: useSearch.ts
app/src/test/: data.ts  setup.ts
db_schema/: create_table.sql
src/: clock_timer.rs  http_server.rs  ip_location.rs  lib.rs  pg_read_types.rs  pg_write_types.rs  rpc_client.rs  types.rs
src/pg_read/: mod.rs  operates.rs  types.rs
src/pg_write/: mod.rs  operates.rs  types.rs
(+80 files in other folders)
