[package]
resolver = "2"
name = "fiber-dashbord-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_with = { version = "3.7.0", features = ["macros", "base64"] }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
jsonrpc-core = "18.0"
tokio = { version = "1", features = [
    "time",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "io-util",
    "io-std",
] }
log = "0.4"
arc-swap = "1"
faster-hex = "0.10.0"
ipinfo = "3"
env_logger = "0.11"

sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "macros",
    "derive",
] }
chrono = { version = "0.4", features = ["serde"] }
salvo = { version = "0.82", features = ["cors"] }

ckb-jsonrpc-types = "0.200.0"
ckb-types = "0.200.0"
multiaddr = { version = "0.3", package = "tentacle-multiaddr" }
